@@ -23,8 +23,9 @@ devscripts (2.8.5) UNRELEASED; urgency=medium
   * Joshua Kwan
     - debrsign: Warn if you passed a changes file but omitted the remote
       address.
+    - Update debchange and tagpending for new bts2ldap gateway.
 
- -- Joshua Kwan <joshk@triplehelix.org>  Mon, 20 Sep 2004 21:00:14 -0700
+ -- Joshua Kwan <joshk@triplehelix.org>  Sat, 25 Sep 2004 09:29:31 -0700
 
 devscripts (2.8.4) unstable; urgency=medium
 
